@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3148 2019/07/31 16:04:39 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3149 2019/07/31 16:10:15 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5105,3 +5105,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated graphics/R-Cairo to 1.5.10 [brook 2019-07-31]
 	Updated graphics/R-colorspace to 1.4.1 [brook 2019-07-31]
 	Updated graphics/R-ggplot2 to 3.2.0 [brook 2019-07-31]
+	Updated graphics/R-munsell to 0.5.0 [brook 2019-07-31]
